added a production script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./app/server",
+    "start:prod": "node ./app/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
